Fixes about page tab spacing on mobile

--- a/resources/assets/sass/pages/about.scss
+++ b/resources/assets/sass/pages/about.scss
@@ -25,6 +25,7 @@
 
           width: 50%;
           min-width: 50%;
+          margin-bottom: 15px;
 
           &.uk-active a {
 
